infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: justjio-ingress
  namespace: justjio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: justjio.rowentey.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: justjio-web-service
                port:
                  number: 80
    - host: justjio-api.rowentey.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: justjio-api-service
                port:
                  number: 8080
    - host: justjio-ws.rowentey.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: justjio-ws-service
                port:
                  number: 8081
